--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Basic Web Page</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" >
 
+  <a href= "https://teachablemachine.withgoogle.com/models/KCN1HxIbO/" target= "_blank">
 
  </head>
 <body>
